# texas-caregiver-crisis

./: .gitignore  CLAUDE.md  CRITICAL_FINDING_CIRCULAR_METHODOLOGY.md  LICENSE  METHODOLOGY.md  README.md  VERIFICATION.md  justfile  pyproject.toml  results_summary.json
data/processed/: bls_oews_texas_2024.csv  hhsc_acre_participation.csv  hhsc_acre_program_funding.csv  hhsc_acre_recoupments.csv  hhsc_acre_wage_history.csv  hhsc_community_icf_iid_costs_by_lonsize_fy2023.csv  hhsc_cost_report_cost_areas.csv  hhsc_federal_funds_summary.csv  hhsc_interest_list_closure_summary_monthly.csv  hhsc_interest_list_legislative_allocations.csv  hhsc_interest_list_releases_summary_monthly.csv  hhsc_interest_list_totals_monthly.csv  hhsc_interest_list_years_on_list_monthly.csv  hhsc_rate_comparison_old_vs_new.csv  hhsc_residential_rate_components.csv  hhsc_setting_costs_fy2023.csv  market_wages.csv  pfd_wage_calculator_all_services.csv  pfd_wage_calculator_target_programs.csv
data/raw/: README.md
data/raw/official/: 2024-hcs-cost-report-instructions.txt  2024-icf-cost-report-instructions.txt  cost-comparison-report-aug-2024.txt  interest-list-data-jan-2026.xlsx  interest-list-reduction.html  interest-list-waiver-caseload-summary-archive.html  promoting-independence-plan-2022.txt
data/raw/official/interest-list-monthly/: interest-list-data-april-2024.xlsx  interest-list-data-april-2025.xlsx  interest-list-data-aug-2024.xlsx  interest-list-data-aug-2025.xlsx  interest-list-data-dec-2023.xlsx  interest-list-data-dec-2024.xlsx  interest-list-data-dec-2025.xlsx  interest-list-data-feb-2024.xlsx  interest-list-data-feb-2025.xlsx  interest-list-data-jan-2024.xlsx  interest-list-data-jan-2025.xlsx  interest-list-data-july-2024.xlsx  interest-list-data-july-2025.xlsx  interest-list-data-june-2024.xlsx  interest-list-data-june-2025.xlsx  interest-list-data-march-2024.xlsx  (+12 more)
data/raw/rates/: 2026-2027-ltss-rte-tables.xlsx  ltss-personal-attendant-base-wage-calculator.xlsx
notebooks/: 00_data_collection.ipynb  01_provider_classification.ipynb  01_wage_policy_analysis.ipynb  02_house_pnl_model.ipynb  02_waitlist_access.ipynb  03_wage_policy_analysis.ipynb  03_wage_stagnation.ipynb  04_waitlist_access.ipynb  05_rate_policy_change.ipynb  05_wage_stagnation.ipynb  06_national_wage_comparison.ipynb  06_policy_brief.ipynb  07_rate_enhancement_effectiveness.ipynb  08_budget_funding_context.ipynb
notebooks/exploratory/: 02_waitlist_access.ipynb  04_policy_brief.ipynb
references/: sources.yaml  tpia-request-draft.md
scripts/: generate_results.py  generate_verified_datasets.py  generate_verified_readme_visuals.py
src/texas_hhcs/: __init__.py  budget.py  cpi.py  rates.py  scraper.py  staffing.py  verified_datasets.py
tests/: test_cpi.py  test_headline_figures.py  test_staffing.py  test_verified_datasets.py
