[project]
name = "texas-caregiver-crisis"
version = "1.0.0"
description = "The Invisible Pay Cut — How Texas's $10.60 wage assumption drives a 100,000-person waitlist"
requires-python = ">=3.12"
dependencies = [
    # Analysis
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.29",
    # Scraping & data extraction
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "tabula-py>=2.9",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/texas_hhcs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
